--- a/resources/cell-lines/index.html
+++ b/resources/cell-lines/index.html
@@ -4,9 +4,12 @@ title: Request iPSC Cell Lines
 ---
 
 <p class="acknowledgement">Provided through the <a href="https://www.rebuildingakidney.org">(Re)Building a Kidney Consortium</a>.</p>
+
+<p>Browse through our available cell lines and scroll down to learn how to request them: <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line?pcid=static">Browse Reporter Lines</a> | <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line?pcid=static">Browse Parental Lines</a></p>
+
 <p class="note">We are now able to offer the first vial of each human iPSC cell lines at no charge and the second vial of the same cell line for $250.00. The recipient will be responsible for shipping costs. This requires membership in <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN</a> (see below for details).</p>
 
-<p>Through integrated efforts of several entities, human iPSC parental and reporter lines are available to the research community. These tools are designed to enable studies to optimize current or new protocols toward target kidney lineages, adapt differentiation efforts to additional contexts (e.g. bioprinting or scaffold seeding), or monitor the maintenance of cell identity under different culture conditions. The reporter iPSC lines are designed to mark specific kidney cell populations upon differentiation into organoids with various fluorescent proteins. Some versions include cell specific Cre recombinase expression for cell lineage tracing.  Applications also include engineering replacement kidneys and preclinical model system research.</p>
+<p>Through integrated efforts of several entities, human iPSC <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line?pcid=static">parental</a> and <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line?pcid=static">reporter</a> lines are available to the research community. These tools are designed to enable studies to optimize current or new protocols toward target kidney lineages, adapt differentiation efforts to additional contexts (e.g. bioprinting or scaffold seeding), or monitor the maintenance of cell identity under different culture conditions. The reporter iPSC lines are designed to mark specific kidney cell populations upon differentiation into organoids with various fluorescent proteins. Some versions include cell specific Cre recombinase expression for cell lineage tracing.  Applications also include engineering replacement kidneys and preclinical model system research.</p>
 
 <h3>Costs</h3>
 
