Refactored rbk layout

--- a/rebuildingakidney/citing/index.html
+++ b/rebuildingakidney/citing/index.html
@@ -1,5 +1,5 @@
 ---
-layout: rbk
+layout: rbk/default
 title: Citing RBK
 ---
 <p>Users of RBK-hosted data are expected to cite the primary publication for the particular data used, as is the accepted norm in scientific publishing. (A full list of papers with data deposited in RBK is <a href="https://www.rebuildingakidney.org/publications/">here</a>.). In addition, the <a href="#heading=h.s3wq3wnsqaje">RBK consortium</a> should be cited, along with <a href="#heading=h.hmb3sxwb90an">data identifiers</a>.</p>
