--- a/rebuildingakidney/projects/stepwise-developmental-mimicry/index.html
+++ b/rebuildingakidney/projects/stepwise-developmental-mimicry/index.html
@@ -1,6 +1,6 @@
 ---
 # req_authn: authn
-layout: rbk
+layout: rbk/default
 tag:
 title: Stepwise developmental mimicry generates proximal tubules in organoids
 redirect_from: /projects/stepwise-developmental-mimicry/
