--- a/rebuildingakidney/projects/synthetic-kidney/index.html
+++ b/rebuildingakidney/projects/synthetic-kidney/index.html
@@ -1,6 +1,6 @@
 ---
 # req_authn: authn
-layout: rbk
+layout: rbk/default
 tag:
 title: 'The Synthetic Kidney: A Revolutionary Solution for the Shortage of Kidneys for Transplantation'
 redirect_from: /projects/synthetic-kidney/
