--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@ custom_js:
 <div class="container-fluid content home">
 
   <div class="jumbotron">
-    <h1>ATLAS-D2K</h1>
-    <h2>Transforming Data to Knowledge</h2>
-    <p>The Analysis, Technology, Leadership, Administration, and Science - Data to Knowledge (ATLAS-D2K) Center’s long-term goal is to bring complex data into an accessible form for our research communities and establish connections between molecular data of the kidney and lower urinary tract.</p>
-    <p class="cta"><a class="btn btn-primary btn-lg" href="/about/" role="button">Learn more</a></p>
+    <div class="overlay">
+      <h1>ATLAS-D2K</h1>
+      <h2>Transforming Data to Knowledge</h2>
+      <p>The Analysis, Technology, Leadership, Administration, and Science - Data to Knowledge (ATLAS-D2K) Center’s long-term goal is to bring complex data into an accessible form for our research communities and establish connections between molecular data of the kidney and lower urinary tract.</p>
+      <p class="cta"><a class="btn btn-primary btn-lg" href="/about/" role="button">Learn more</a></p>
+    </div>
   </div>
 
 <!-- Display statistics of data -->
@@ -68,11 +70,13 @@ custom_js:
                         <i class="stat-icon fa-solid fa-flask-gear"></i>
                         <div>
                             <h2 class="stat-number">
-                              <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AwpjBFeEesKKK0SegDMA1jgCeIALoBfIQCUAkgBETQrAAsU3XEkoBFALQBNAGwAjACyJqZmQA@sort(RCT::desc::,Stage_Ordinal,RID)">
+                              <a href="#">20
+                                <!--
                               <span class="stat-number" id="stat-assay-number">
-                                <!-- spinner: -->
+
                                 <i class="fas fa-sync-alt fa-spin"></i>
                               </span>
+                              -->
                             </a></h2>
                             <p class="statistic-label">Assay Types</p>
                         </div>
@@ -85,13 +89,15 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-vial"></i>
                       <div>
-                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AwpjBFeEesKKK0SegDMA1jgCeIALoBfIQCUAkgBETQrAAsU3XEkoBFALQBNAGwAjACyJqZmQA@sort(RCT::desc::,Stage_Ordinal,RID)">
+                          <h2 class="stat-number"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AwpjBFeEesKKK0SegDMA1jgCeIALoBfIQCUAkgBETQrAAsU3XEkoBFALQBNAGwAjACyJqZmQA@sort(RCT::desc::,Stage_Ordinal,RID)">14,228
+                            <!--
                             <span class="stat-number" id="stat-specimen-number">
-                              <!-- spinner: -->
+
                               <i class="fas fa-sync-alt fa-spin"></i>
                             </span>
+                            -->
                           </a></h2>
-                          <p class="statistic-label"><a href="">Specimen</a></p>
+                          <p class="statistic-label">Specimen</p>
                       </div>
                   </div>
                 </div>
@@ -102,11 +108,13 @@ custom_js:
                 <div class="statistic-container">
                     <i class="stat-icon fa-solid fa-microscope"></i>
                     <div>
-                        <h2 class="stat-number"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAAqCIB4+-qbBoQAaAMxUAJqRXr5Uskme7payjIYmyOjYeAigxGRoFAjUtAws7Jw8fMGi4lIyAMKYYES8EPTCRF1oSFq6+sZmVjYg9o7OlACKnvHurgCyucZAA@sort(RCT::desc::,Stage_Ordinal,RID)">
+                        <h2 class="stat-number"><a href="#">12,925
+                          <!--
                           <span class="stat-number" id="stat-imaging-number">
-                            <!-- spinner: -->
+
                             <i class="fas fa-sync-alt fa-spin"></i>
                           </span>
+                          -->
                         </a></h2>
                         <p class="statistic-label">Imaging</p>
                     </div>
@@ -119,11 +127,13 @@ custom_js:
                 <div class="statistic-container">
                     <i class="stat-icon fa-solid fa-dna"></i>
                     <div>
-                        <h2 class="stat-number"><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOrsIACMAGyJ8QDSNF45uQDsiZwAnMUALDlJackATPpGyOjYeLAgAMKYYGKEKBBSYiNoceFRMThxVlQ4ADY4YEh4hoZAA@sort(RMT::desc::,RID)">
+                        <h2 class="stat-number"><a href="#">237
+                          <!--
                           <span class="stat-number" id="stat-transcriptomics-number">
-                            <!-- spinner: -->
+
                             <i class="fas fa-sync-alt fa-spin"></i>
                           </span>
+                          -->
                           </a>
                         </h2>
                         <p class="statistic-label">Transcriptomics</p>
@@ -142,11 +152,14 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-clone"></i>
                       <div>
-                          <h2 class="stat-number"><a href="">
+                          <h2 class="stat-number"><a href="#">
+                            18
+                            <!--
                             <span class="stat-number" id="stat-cell-lines-number">
-                              <!-- spinner: -->
+
                               <i class="fas fa-sync-alt fa-spin"></i>
                             </span>
+                            -->
                           </a></h2>
                           <p class="statistic-label">Cell Lines</p>
                       </div>
@@ -159,11 +172,13 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-list"></i>
                       <div>
-                          <h2 class="stat-number"><a href="">
+                          <h2 class="stat-number"><a href="#">176
+                            <!--
                             <span class="stat-number" id="stat-protocols-number">
-                            <!-- spinner: -->
+
                             <i class="fas fa-sync-alt fa-spin"></i>
                           </span>
+                          -->
                       </a></h2>
                           <p class="statistic-label">Protocols</p>
                       </div>
@@ -176,11 +191,13 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-droplet"></i>
                       <div>
-                          <h2 class="stat-number"><a href="">
+                          <h2 class="stat-number"><a href="#">302
+                            <!--
                             <span class="stat-number" id="stat-antibody-validation-number">
-                              <!-- spinner: -->
+
                               <i class="fas fa-sync-alt fa-spin"></i>
                             </span>
+                            -->
                           </a></h2>
                           <p class="statistic-label">Antibody Validation</p>
                       </div>
@@ -193,11 +210,13 @@ custom_js:
                   <div class="statistic-container">
                       <i class="stat-icon fa-solid fa-newspaper"></i>
                       <div>
-                          <h2 class="stat-number"><a href="">
+                          <h2 class="stat-number"><a href="#">185
+                            <!--
                             <span class="stat-number" id="stat-pubs-number">
-                              <!-- spinner: -->
+
                               <i class="fas fa-sync-alt fa-spin"></i>
                             </span>
+                            -->
                           </a></h2>
                           <p class="statistic-label">Publications</p>
                       </div>
@@ -208,13 +227,11 @@ custom_js:
 
 
 <div class="row" id="shortcuts">
-
+<h2>Browse these shortcuts for GUDMAP and RBK data</h2>
 <div class="col-md-12">
   <div class="shortcuts">
 
-
-  <h3>Browse these shortcuts for GUDMAP and RBK data...<br/>
-    <small>For more search options, click the DATA menu above.</small>
+    <h3>For more search options, click the DATA menu above.</h3>
 <!--
 <small>Over 11,000 records and 4,000 images</small>
 -->
@@ -282,27 +299,19 @@ custom_js:
   </ul>
 </div>
 </div>
-<!--
-<div class="row">
 
-<div class="col-md-12">
-    <iframe class="embed-responsive" name="resources-viewer" id="resources-viewer" style="width: 675px; height: 350px; border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/plot/?config=gudmap-data-summary-responsive">
-    </iframe>
-</div>
-
-</div>
--->
 </div>
 </div>
 
 
 </div>
 <div class="row" id="community">
+  <h2>Participating Consortia</h2>
   <div class="col-md-6" id="news">
 
       <h3>Latest News</h3>
       <ul class="posts">
-        {% for post in site.posts limit: 4 %}
+        {% for post in site.posts limit: 6 %}
       <li>
         <a href="{{ post.url }}">{{ post.title }}</a><br/>
         <time>
@@ -316,7 +325,7 @@ custom_js:
 
   </div>
   <div class="col-md-6" id="consortiums">
-  <h3>Consortiums<br/>
+  <h3>ReBuilding A Kidney (RBK) and GUDMAP<br/>
   <small>The ATLAS-D2K Center supports the data and resources of the RBK and GUDMAP Consortiums. Click an image to learn more.</small></h3>
     <div class="consortium">
       <a href="/rebuildingakidney/">
@@ -330,6 +339,35 @@ custom_js:
     </div>
   </div>
 
+</div>
+
+<div class="row" id="opps">
+  <h2>Consortia Highlights</h2>
+  <div class="col-md-4">
+    <h3>Funding Opportunities</h3>
+    <ul>
+      <li><a href="/collaboration/op-pool/">Learn about Opportunity Pools</a></li>
+      <li><a href="/collaboration/gudmap-collab/">Apply to be a GUDMAP Collaborating Group</a></li>
+      <li><a href="/collaboration/rbk-collab/">Apply to be a RBK Collaborating Group</a></li>
+    </ul>
+  </div>
+  <div class="col-md-4">
+    <h3>Recent Publications</h3>
+    <ul>
+      <li><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a></li>
+      <li><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in {Pax3} spina bifida mutants underlies deficits of bladder innervation and function</a></li>
+      <!--
+      <li><a href="https://doi.org/10.1152/ajprenal.00431.2020">A Uropathogenic E. coli UTI89 model of prostatic inflammation and collagen accumulation for use in studying aberrant collagen production in the prostate</a></li>
+      -->
+    </ul>
+  </div>
+  <div class="col-md-4">
+    <h3>Featured Imaging Data</h3>
+
+    <div class="image-carousel">
+		{% include carousel.html %}
+    </div>
+  </div>
 </div>
 <div class="row" id="featured-tools">
   <div class="col-md-12">
@@ -377,34 +415,6 @@ custom_js:
   </div>
 </div>
 
-<div class="row" id="opps">
-  <h2>Consortia Highlights</h2>
-  <div class="col-md-4">
-    <h3>Funding Opportunities</h3>
-    <ul>
-      <li><a href="/collaboration/op-pool/">Learn about Opportunity Pools</a></li>
-      <li><a href="/collaboration/gudmap-collab/">Apply to be a GUDMAP Collaborating Group</a></li>
-      <li><a href="/collaboration/rbk-collab/">Apply to be a RBK Collaborating Group</a></li>
-    </ul>
-  </div>
-  <div class="col-md-4">
-    <h3>Recent Publications</h3>
-    <ul>
-      <li><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a></li>
-      <li><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in {Pax3} spina bifida mutants underlies deficits of bladder innervation and function</a></li>
-      <!--
-      <li><a href="https://doi.org/10.1152/ajprenal.00431.2020">A Uropathogenic E. coli UTI89 model of prostatic inflammation and collagen accumulation for use in studying aberrant collagen production in the prostate</a></li>
-      -->
-    </ul>
-  </div>
-  <div class="col-md-4">
-    <h3>Featured Imaging Data</h3>
-
-    <div class="image-carousel">
-		{% include carousel.html %}
-    </div>
-  </div>
-</div>
 
 <script>
 
@@ -442,7 +452,7 @@ $(document).ready(function(){
       rows: 1
     });
 */
-
+/*
     $('a.featured').colorbox({
       maxWidth: "800px",
       rel:'gal',
@@ -453,7 +463,7 @@ $(document).ready(function(){
         return txt+" More info".link(ridurl);
       }
     });
-
+*/
 });
 </script>
 
