--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -9,108 +9,61 @@ tags: []
 <div class="container-fluid content home">
 <div class="row">
   <h1 class="tagline">The GenitoUrinary Development Molecular Anatomy Project (GUDMAP) provides data and tools<br/> that facilitate research on the GenitoUrinary (GU) tract for the scientific and medical community.</h1>
-  <div class="col-md-8">
-    <div class="shortcuts">
-
-
-    <h2>Browse these data shortcuts...<br/>
-      <small>For more search options, click the BROWSE DATA menu above.</small>
-  <!--
-<small>Over 11,000 records and 4,000 images</small>
--->
-</h2>
-<div class="row shortcut-links">
-  <div class="col-md-4">
-    <ul>
-      <li class="sub-parent">SEARCH BY...</li>
-      <li><a href="/chaise/recordset/#2/Common:Gene?pcid=static/home">Gene</a></li>
-      <li><a href="/chaise/recordset/#2/Vocabulary:Anatomy/?pcid=static/home">Anatomy: Facet Search</a></li>
-      <li><a href="/deriva-webapps/treeview/">Anatomy: Tree View</a></li>
-      <!--
-      <li><a href="/deriva-webapps/boolean-search/">Anatomy: Boolean Search</a></li> -->
-      <li><a href="/chaise/recordset/#2/Common:Principal_Investigator/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gEkkB9AcQFUARAWQEEAFY+gkAGhCwAsUBLXJOPAAuGNDgC6AXylA@sort(MNv4BPeh3jGF-9rfFpULzQ,RID)?pcid=navbar/static">Investigator</a></li>
-    </ul>
-    <ul>
-      <li class="sub-parent">VISUALIZATIONS</li>
-      <li><a href="/deriva-webapps/plot/?config=study-violin">mRNA-Seq Data</a></li>
-      <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcHV0gA@sort(RMT::desc::,RID)?pcid=static/home">scRNA-Seq
-      Data</a></li>
-    </ul>
-    <ul>
-      <li class="sub-parent">DATA COLLECTIONS</li>
-<!--      <li><a href="/chaise/record/#2/Common:Collection/RID=17-3ZHJ?pcid=static/home">Featured Image Annotations</a></li> -->
-      <li><a href="/chaise/recordset/#2/Common:Collection@sort(RID)?pcid=static/home">All Data Collections</a></li>
-    </ul>
-  </div>
-  <div class="col-md-4">
-    <ul>
-      <li class="sub-parent">IMAGING</li>
-      <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBipoZGxkA@sort(RCT::desc::,Stage_Ordinal,RID)?pcid=static/home">In-situ Hybridization</a></li>
-      <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAOTDTDQrAAsU3XEkoBJABIBhQ0eNA?pcid=static/home">Immunohistochemistry</a></li>
-      <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAOTDTDQrAAsU3XEkoAJbkiIoANigDm+48ZAA@sort(Stage_Ordinal,RID)?pcid=static/home">Histology</a></li>
-      <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFp3l2Y0NGxkA@sort(RCT::desc::,Stage_Ordinal,RID)">NanoCT</a></li>
-      <!--
-<li><a href="/chaise/recordset/#2/Gene_Expression:Specimen@sort(RCT::desc::,Stage_Ordinal,RID)?pcid=home/static">All Specimen Data</a></li>
--->
-    </ul>
-    <ul>
-      <li class="sub-parent">SEQUENCING</li>
-      <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOr6BoZAA@sort(RMT::desc::,RID)?pcid=static/home">mRNA-Seq</a></li>
-      <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjABsALQAigDSNF7sIKnJAJoAUvkATPoGhkA@sort(RMT::desc::,RID)?pcid=static/home">scRNA-Seq/snRNA-Seq</a></li>
-      <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAayfoGhkA@sort(RMT::desc::,RID)?pcid=static/home">ChIP-Seq</a></li>
-      <li><a href="/chaise/recordset/#2/Microarray:Sample@sort(RID)?pcid=static/home">Microarray</a></li>
-      <!--
-      <li><a href="/chaise/recordset/#2/RNASeq:Study/?pcid=static/home">All Studies</a></li>
-      -->
-    </ul>
-  </div>
-  <div class="col-md-4">
-    <ul>
-      <li class="sub-parent">EXPERIMENT PROTOCOLS</li>
-      <li><a href="/chaise/recordset/#2/Protocol:Protocol@sort(RMT::desc::,RID)?pcid=static/home">All Protocols</a></li>
-    </ul>
-    <ul>
-      <li class="sub-parent">CELL & ANIMAL MODELS</li>
-      <li><a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line@sort(ID)?pcid=static/home">Transgenic Reporter Cell Lines</a></li>
-      <li><a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line?pcid=static/home">Parental Cell Lines</a></li>
-      <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain@sort(ID)?pcid=static/home">Transgenic Mouse Strains</a></li>
-    </ul>
-    <ul>
-      <li class="sub-parent">ANTIBODIES</li>
-      <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests@sort(RID)?pcid=static/home">Antibody Validation</a></li>
-      <li><a href="/chaise/recordset/#2/Antibody:Antibodies?pcid=static/home">Antibody Listings</a></li>
-    </ul>
-  </div>
-</div>
-
-<div class="row">
-
-<div class="col-md-12">
-      <iframe class="embed-responsive" name="resources-viewer" id="resources-viewer" style="width: 675px; height: 350px; border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/plot/?config=gudmap-data-summary-responsive">
-      </iframe>
-</div>
-
-</div>
-</div>
-</div>
-  <div class="col-md-4 featured">
-    <h3>Examples of GUDMAP imaging data</h3>
-
-    <div class="image-carousel">
-		{% include carousel.html %}
+  <div class="col-md-12">
+    <div class="shortcuts alternate">
+    <h2>Browse these data shortcuts to all of GUDMAP's data</h2>
+    <div class="row shortcut-links">
+      <div class="col-md-4">
+        <ul>
+          <li class="sub-parent">IMAGING</li>
+          <li class="info-label"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gGEUJUMAXASzQFsQAaELACxQtyTnhAHEBVAEQCyAQQAKIALoBfaUA@sort(RCT::desc::,Stage_Ordinal,RID)">Specimen Data <i class="fas fa-info-circle" title="Represents the tissue used in experiments and is where imaging data is stored."></i></a>
+            <ul class="sub-list">
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAAqGJsjo2HiwIADCfKgYRNxokoIg9o7OlFQAqpYAsrJBxsZAA@sort(RCT::desc::,Stage_Ordinal,RID)">Immunohistochemistry (IHC)</a></li>
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBipoYmyOjYeLAgAMJ8qBhE3GiSgiD2js6UVACqlgCysgAKQcZAA@sort(RCT::desc::,Stage_Ordinal,RID)">In-Situ Hybridization (ISH)</a></li>
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJaqzDE2R0bDxYEABhPlQMIm40SUEQe0dnSioAVUsAWVkABUDjIA@sort(RCT::desc::,Stage_Ordinal,RID)">Histology</a></li>
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFp3l2Y0MmyOjYeLAgAMJ8qBhE3GiSgiD2js6UVACqlgCysgAKAcZAA@sort(RCT::desc::,Stage_Ordinal,RID)">NanoCT</a></li>
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAJqGJsjo2HiwIADCfKgYRNxokoIg9o7OlFQAqpYAsrIACsHGQA@sort(RCT::desc::,Stage_Ordinal,RID)">Transgenic Fluorescent Imaging (TG)</a></li>
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoAGgGYqAJqGJsjo2HiwIADCfKgYRNxokoIg9o7OlFQAqpYAsrIACsHGQA@sort(RCT::desc::,Stage_Ordinal,RID)">Enzyme Histochemistry</a></li>
+            </ul>
+          </li>
+          <li class="sub-parent">SPECIMEN records (Not imaging)</li>
+          <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAOqGJsjo2HiwIADCfKgYRNxokoIg9o7OlFQAqpYAsrIACsHGQA@sort(RCT::desc::,Stage_Ordinal,RID)">Next Generation Sequencing (RNA-Seq)</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <ul>
+          <li class="sub-parent">TRANSCRIPTOMIC AND EPIGENOMIC</li>
+          <li class="info-label"><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gGEUJUMAXASzQFsQAaELACxQtyTnhAHEBVAEQCyAQQAKIALoBfaUA@sort(RMT::desc::,RID)">Study data  <i class="fas fa-info-circle" title="Describes studies of omics data, organized by Experiment and Replicate records"></i></a>
+            <ul class="sub-list">
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOr6Rsjo2HiwIADCKBCoGGKEaELsIJHRsZQA4gCqKgCydAAKOYZAA@sort(RMT::desc::,RID)">mRNA-Seq</a></li>
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUskATPpGyOjYeLAgAMIoEKgYYoRoQuwgkdGxlADiAKoqALJ0AArZhkA@sort(RMT::desc::,RID)">scRNA-Seq</a></li>
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAayfpGyOjYeLAgAMIoEKgYYoRoQuwgkdGxlADiAKoqALJ0AArZhkA@sort(RMT::desc::,RID)">ChiP-Seq</a></li>
+              <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gBUAFAWQH0ARMAFzBABoQsALFAS1yTnmozRwC6AX3rJ02PLBABhFBFQZqbNAFsGTVhxxcEIAOIBVCiQCCREMOFA@sort(RMT::desc::,RID)">mRNA-Seq Expression Data</a></li>
+            </ul>
+          </li>
+          <li><a href="/chaise/recordset/#2/Microarray:Sample@sort(RID)">Microarray (Sample)</a></li>
+          <li class="sub-parent">VISUALIZATION TOOLS</li>
+          <li><a href="/deriva-webapps/plot/?config=study-violin">mRNA-Seq Visualizations (Violin Plots)</a></li>
+          <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcPWR0bDxYEABhSVQMcTQAW3YQLAALFEJcJEoAcQBVCIBZOgAFEN0gA@sort(RMT::desc::,RID)">scRNA-Seq Visualization (Scatter Plots)</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <ul>
+          <li class="sub-parent">RESOURCES</li>
+          <li><a href="/chaise/recordset/#2/Common:Collection/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaalAG3ZyyIEtGA+jQioMfNLQEAzANY4AniAC6AX1YAlAJIARZaywALFL1xJKARQC0AZgDSAVgBsylaqA@sort(RID)">Data Collections</a></li>
+          <li><a href="/chaise/recordset/#2/Protocol:Protocol/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEABQxSJSxQBsQAaa2+xpgfQGEUEVBiIBLNAFseAMwDWOAJ4gAugF92AJQCSAERXssACxSjcSSgEUAtAGYA0gFYAbCtVqgA@sort(RMT::desc::,RID)">Protocols</a></li>
+          <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRwBtaB9AGQEsI8AaEAWXSRwYBlIhjBsGVFBFQYiLNAFsGAMwDWOAJ4gAugF8uAJQCSAER1csACxQtcSSgEUAtAGYA0gFYAbDt16gA@sort(ID)">Mouse Strains</a></li>
+          <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZWYH0AVHEiJIeAYRQRUGemgC2PAGYBrHCwC6AX3YAlAJIAREGvZYAFijq4klAIoBaAMwBpAKwA2Ixs1A@sort(RID)">Antibody Validation</a></li>
+          <li><a href="/chaise/recordset/#2/Antibody:Antibodies/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZSjpyQH0AwigioM9NAFt+AMwDWOFgF0AvuwBKASQAiIJeywALFHVxJKARQC0AZgDSAVgBselaqA@sort(RID)">Antibody Listings</a></li>
+          <li><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArADY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)">Publications</a></li>
+          <li class="sub-parent">SEARCH BY...</li>
+          <li><a href="/chaise/recordset/#2/Common:Principal_Investigator/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gEkkB9AcQFUARAWQEEAFY+gkAGhCwAsUBLXJOPAAuGNDgC6AXylA@sort(RID)">GUDMAP Investigator</a></li>
+        </ul>
+      </div>
     </div>
+  </div>
+</div>
 
-    <h3>GUDMAP Publications: <a href="/publications/">240+</a></h3>
-    <ul>
-      <li><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a></li>
-      <li><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in {Pax3} spina bifida mutants underlies deficits of bladder innervation and function</a></li>
-      <!--
-      <li><a href="https://doi.org/10.1152/ajprenal.00431.2020">A Uropathogenic E. coli UTI89 model of prostatic inflammation and collagen accumulation for use in studying aberrant collagen production in the prostate</a></li>
-      -->
-    </ul>
-
-      <p class="signup"><a href="http://eepurl.com/hyUyjD" class="btn btn-success" role="button">Join our announcements list!</a></p>
-	</div>
 </div>
 <div class="row bottom">
 
@@ -170,48 +123,62 @@ tags: []
       <li class="list-group-item"><h4 class="media-heading"><a href="/reference/ontology/">Ontology</a></h4></li>
     </ul>
 
-    <h3>Using GUDMAP <small><em><a href="/using-gudmap/">View all</a></em></small></h3>
-    <ul class="list-group">
-      <li class="list-group-item"><h4 class="media-heading"><a href="/using-gudmap/">Using GUDMAP Data</a></h4></li>
-      <li class="list-group-item"><h4 class="media-heading"><a href="/using-gudmap/use-cases/">GUDMAP Use Cases</a></h4></li>
-      <li class="list-group-item"><h4 class="media-heading"><a href="/using-gudmap/citing-gudmap/">Citing GUDMAP Data</a></h4></li>
+    <h3>GUDMAP Publications: <a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArADY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)">240+</a></h3>
+    <ul>
+      <li><a href="https://www.doi.org/10.1016/j.devcel.2022.07.004">Single-cell and spatial mapping identify cell types and signaling networks in the human ureter</a></li>
+      <li><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a></li>
+      <li><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in {Pax3} spina bifida mutants underlies deficits of bladder innervation and function</a></li>
+      <!--
+      <li><a href="https://doi.org/10.1152/ajprenal.00431.2020">A Uropathogenic E. coli UTI89 model of prostatic inflammation and collagen accumulation for use in studying aberrant collagen production in the prostate</a></li>
+      -->
     </ul>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-md-4 featured">
 
-    <h3>Announcements <small><em><a href="/news/">View all</a></em></small></h3>
-    <ul class="list-group posts">
-      {% for post in site.posts limit: 4 %}
-    <li class="list-group-item">
-      <h4 class="media-heading">
-        <a href="{{ post.url }}">{{ post.title }}</a>
-      </h4>
-      <time><small><em>
-        {{ post.date | date: "%m/%d/%Y" }}
-      </em></small></time>
-    </li>
-    {% endfor %}
-    </ul>
+    <h3>Examples of GUDMAP imaging data</h3>
+
+    <div class="image-carousel">
+    {% include carousel.html %}
+    </div>
+
+      <p class="signup"><a href="http://eepurl.com/hyUyjD" class="btn btn-success" role="button">Join our announcements list!</a></p>
 
     </div>
-    <!--
-    <section id="news">
-      <h3>Announcements</h3>
-      <ul class="list-group posts">
-        {% for post in site.posts limit: 4 %}
-      <li class="list-group-item">
-        <h4>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-        </h4>
-        <time><small><em>
-          {{ post.date | date: "%m/%d/%Y" }}
-        </em></small></time>
-      </li>
-      {% endfor %}
-      </ul>
-  </section>
-  -->
 
 </div>
 </div>
+<script>
+
+$(document).ready(function(){
+
+    //Carousel
+
+    $('.slider').slick({
+      slidesToShow: 3,
+      slidesToScroll: 1,
+      infinite: false,
+      rows: 2
+    });
+/*
+    $('.slider.students').slick({
+      slidesToShow: 4,
+      slidesToScroll: 1,
+      infinite: false,
+      rows: 1
+    });
+*/
+/*
+    $('a.featured').colorbox({
+      maxWidth: "800px",
+      rel:'gal',
+      transition: 'fade',
+      title:function () {
+        var ridurl = $(this).find('img').attr('alt');
+        var txt = $(this).attr('title');
+        return txt+" More info".link(ridurl);
+      }
+    });
+*/
+});
+</script>
