updated gudmap landing page

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -11,12 +11,12 @@ tags: []
   <h1 class="tagline">The GenitoUrinary Development Molecular Anatomy Project (GUDMAP) provides data and tools<br/> that facilitate research on the GenitoUrinary (GU) tract for the scientific and medical community.</h1>
   <div class="col-md-12">
     <div class="shortcuts alternate">
-    <h2>Browse these data shortcuts to all of GUDMAP's data</h2>
+    <h2>Browse these shortcuts to GUDMAP's data available in ATLAS-D2K</h2>
     <div class="row shortcut-links">
       <div class="col-md-4">
         <ul>
           <li class="sub-parent">IMAGING</li>
-          <li class="info-label"><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gGEUJUMAXASzQFsQAaELACxQtyTnhAHEBVAEQCyAQQAKIALoBfaUA@sort(RCT::desc::,Stage_Ordinal,RID)">Specimen Data <i class="fas fa-info-circle" title="Represents the tissue used in experiments and is where imaging data is stored."></i></a>
+          <li class="info-label"><a class="tooltiplink" href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gGEUJUMAXASzQFsQAaELACxQtyTnhAHEBVAEQCyAQQAKIALoBfaUA@sort(RCT::desc::,Stage_Ordinal,RID)">Specimen Data <i class="fas fa-info-circle"></i><span>Represents the tissue used in experiments and is where imaging data is stored.</span></a>
             <ul class="sub-list">
               <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAAqGJsjo2HiwIADCfKgYRNxokoIg9o7OlFQAqpYAsrJBxsZAA@sort(RCT::desc::,Stage_Ordinal,RID)">Immunohistochemistry (IHC)</a></li>
               <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBipoYmyOjYeLAgAMJ8qBhE3GiSgiD2js6UVACqlgCysgAKQcZAA@sort(RCT::desc::,Stage_Ordinal,RID)">In-Situ Hybridization (ISH)</a></li>
@@ -26,14 +26,12 @@ tags: []
               <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoAGgGYqAJqGJsjo2HiwIADCfKgYRNxokoIg9o7OlFQAqpYAsrIACsHGQA@sort(RCT::desc::,Stage_Ordinal,RID)">Enzyme Histochemistry</a></li>
             </ul>
           </li>
-          <li class="sub-parent">SPECIMEN records (Not imaging)</li>
-          <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBiAOqGJsjo2HiwIADCfKgYRNxokoIg9o7OlFQAqpYAsrIACsHGQA@sort(RCT::desc::,Stage_Ordinal,RID)">Next Generation Sequencing (RNA-Seq)</a></li>
         </ul>
       </div>
       <div class="col-md-4">
         <ul>
           <li class="sub-parent">TRANSCRIPTOMIC AND EPIGENOMIC</li>
-          <li class="info-label"><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gGEUJUMAXASzQFsQAaELACxQtyTnhAHEBVAEQCyAQQAKIALoBfaUA@sort(RMT::desc::,RID)">Study data  <i class="fas fa-info-circle" title="Describes studies of omics data, organized by Experiment and Replicate records"></i></a>
+          <li class="info-label"><a class="tooltiplink" href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gGEUJUMAXASzQFsQAaELACxQtyTnhAHEBVAEQCyAQQAKIALoBfaUA@sort(RMT::desc::,RID)">Study data  <i class="fas fa-info-circle"></i><span>Describes studies of omics data, organized by Experiment and Replicate records.</span></a>
             <ul class="sub-list">
               <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOr6Rsjo2HiwIADCKBCoGGKEaELsIJHRsZQA4gCqKgCydAAKOYZAA@sort(RMT::desc::,RID)">mRNA-Seq</a></li>
               <li><i class="fa-solid fa-greater-than"></i> <a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUskATPpGyOjYeLAgAMIoEKgYYoRoQuwgkdGxlADiAKoqALJ0AArZhkA@sort(RMT::desc::,RID)">scRNA-Seq</a></li>
@@ -50,14 +48,15 @@ tags: []
       <div class="col-md-4">
         <ul>
           <li class="sub-parent">RESOURCES</li>
-          <li><a href="/chaise/recordset/#2/Common:Collection/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaalAG3ZyyIEtGA+jQioMfNLQEAzANY4AniAC6AX1YAlAJIARZaywALFL1xJKARQC0AZgDSAVgBsylaqA@sort(RID)">Data Collections</a></li>
           <li><a href="/chaise/recordset/#2/Protocol:Protocol/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEABQxSJSxQBsQAaa2+xpgfQGEUEVBiIBLNAFseAMwDWOAJ4gAugF92AJQCSAERXssACxSjcSSgEUAtAGYA0gFYAbCtVqgA@sort(RMT::desc::,RID)">Protocols</a></li>
+          <li><a href="/chaise/recordset/#2/Schematics:Schematic_Group@sort(ID)">Mouse Schematics</a></li>
           <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRwBtaB9AGQEsI8AaEAWXSRwYBlIhjBsGVFBFQYiLNAFsGAMwDWOAJ4gAugF8uAJQCSAER1csACxQtcSSgEUAtAGYA0gFYAbDt16gA@sort(ID)">Mouse Strains</a></li>
           <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZWYH0AVHEiJIeAYRQRUGemgC2PAGYBrHCwC6AX3YAlAJIAREGvZYAFijq4klAIoBaAMwBpAKwA2Ixs1A@sort(RID)">Antibody Validation</a></li>
           <li><a href="/chaise/recordset/#2/Antibody:Antibodies/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAQQiIEsyoBPEAGmtoZSjpyQH0AwigioM9NAFt+AMwDWOFgF0AvuwBKASQAiIJeywALFHVxJKARQC0AZgDSAVgBselaqA@sort(RID)">Antibody Listings</a></li>
           <li><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArADY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)">Publications</a></li>
           <li class="sub-parent">SEARCH BY...</li>
           <li><a href="/chaise/recordset/#2/Common:Principal_Investigator/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gEkkB9AcQFUARAWQEEAFY+gkAGhCwAsUBLXJOPAAuGNDgC6AXylA@sort(RID)">GUDMAP Investigator</a></li>
+          <li class="info-label"><a class="tooltiplink" href="/chaise/recordset/#2/Common:Collection/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaalAG3ZyyIEtGA+jQioMfNLQEAzANY4AniAC6AX1YAlAJIARZaywALFL1xJKARQC0AZgDSAVgBsylaqA@sort(RID)">Data Collections <i class="fas fa-info-circle"></i><span>Customized collections of datasets, usually to collect data within a publication.</span></a></li>
         </ul>
       </div>
     </div>
@@ -91,7 +90,6 @@ tags: []
         <h4 class="media-heading"><a href="/tutorials/urogenital-dev/">Urogenital System Development</a></h4>
       </div>
     </div>
-    <!--
     <div class="media">
     <div class="media-left">
       <a href="/tutorials/kidney-dev/">
@@ -102,7 +100,6 @@ tags: []
       <h4 class="media-heading"><a href="/tutorials/kidney-dev/">Development of the Kidney in Mouse and Human</a></h4>
     </div>
   </div>
- -->
   <div class="media">
     <div class="media-left">
       <a href="/tutorials/prostate-dev/">
@@ -116,21 +113,19 @@ tags: []
 
 </div>
   <div class="col-md-4">
-    <h3>Reference <small><em><a href="/reference/">View all</a></em></small></h3>
+    <h3>Resources <small><em><a href="/resources/">View all</a></em></small></h3>
     <ul class="list-group">
-      <li class="list-group-item"><h4 class="media-heading"><a href="/reference/genital-tubercule-atlas/">Mouse Genital Tubercule Atlas</a></h4></li>
-      <li class="list-group-item"><h4 class="media-heading"><a href="/reference/adult-mouse-penis-3d/">Mouse Penis 3D Atlas</a></h4></li>
-      <li class="list-group-item"><h4 class="media-heading"><a href="/reference/ontology/">Ontology</a></h4></li>
+      <li class="list-group-item"><h4 class="media-heading"><a href="/resources/genital-tubercule-atlas/">Mouse Genital Tubercule Atlas</a></h4></li>
+      <li class="list-group-item"><h4 class="media-heading"><a href="/resources/adult-mouse-penis-3d/">Mouse Penis 3D Atlas</a></h4></li>
+      <li class="list-group-item"><h4 class="media-heading"><a href="/resources/ontology/">Ontology</a></h4></li>
     </ul>
 
     <h3>GUDMAP Publications: <a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArADY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)">240+</a></h3>
-    <ul>
-      <li><a href="https://www.doi.org/10.1016/j.devcel.2022.07.004">Single-cell and spatial mapping identify cell types and signaling networks in the human ureter</a></li>
-      <li><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a></li>
-      <li><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in {Pax3} spina bifida mutants underlies deficits of bladder innervation and function</a></li>
-      <!--
-      <li><a href="https://doi.org/10.1152/ajprenal.00431.2020">A Uropathogenic E. coli UTI89 model of prostatic inflammation and collagen accumulation for use in studying aberrant collagen production in the prostate</a></li>
-      -->
+
+    <ul class="list-group">
+      <li class="list-group-item"><h4 class="media-heading"><a href="https://www.doi.org/10.1016/j.devcel.2022.07.004">Single-cell and spatial mapping identify cell types and signaling networks in the human ureter</a> <small><em>(Dev Cell, August 2022)</em></small></h4></li>
+      <li class="list-group-item"><h4 class="media-heading"><a href="https://doi.org/10.1016/j.ydbio.2021.05.014">Single cell transcriptomic analysis of external genitalia reveals complex and sexually dimorphic cell populations in the early genital tubercle</a> <small><em>(Dev Bio, September 2021)</em></small></h4></li>
+      <li class="list-group-item"><h4 class="media-heading"><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in <em>Pax3</em> spina bifida mutants underlies deficits of bladder innervation and function</a> <small><em>(Dev Bio, August 2021)</em></small></h4></li>
     </ul>
   </div>
 
